--- a/package.json
+++ b/package.json
@@ -4,18 +4,22 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "lint": "eslint --ext .js --ignore-path .gitignore .",
     "start": "node src/index.js"
   },
   "keywords": [],
   "author": "Roman Semenov <semenov.roma@gmail.com>",
   "license": "ISC",
   "dependencies": {
-    "circomlib": "git+https://github.com/tornadocash/circomlib.git#c372f14d324d57339c88451834bf2824e73bbdbc",
+    "circomlib": "git+https://github.com/tornadocash/circomlib.git#6282474dc03e47a7cba1486e6ac8df08842314c3",
     "dotenv": "^8.2.0",
-    "eslint": "^7.5.0",
-    "fixed-merkle-tree": "^0.3.1",
+    "fixed-merkle-tree": "^0.3.3",
     "ioredis": "^4.17.3",
     "snarkjs": "git+https://github.com/tornadocash/snarkjs.git#869181cfaf7526fe8972073d31655493a04326d5",
     "web3": "^1.2.11"
+  },
+  "devDependencies": {
+    "eslint": "^7.5.0",
+    "babel-eslint": "^10.1.0"
   }
 }
