--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,9 +2,15 @@ version: '2'
 
 services:
   app:
-    build: .
-    env_file: .env
+    image: tornadocash/root-updater
     depends_on: [redis]
+    environment:
+      RPC_URL: https://kovan.infura.io/v3/...
+      PRIVATE_KEY: ...
+      REDIS_URL: redis://redis:6379
+      FARM_ADDR: 0x46226040037A0A5bf059e2e1Dc3dc97Ef653735C
+      MERKLE_TREE_LEVELS: 20
+      INSERT_BATCH_SIZE: 1000
 
   redis:
     image: redis
