--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "circomlib": "git+https://github.com/tornadocash/circomlib.git#5beb6aee94923052faeecea40135d45b6ce6172c",
+    "cron": "^1.8.2",
     "dotenv": "^8.2.0",
     "fixed-merkle-tree": "^0.3.4",
     "ioredis": "^4.17.3",
@@ -19,7 +20,7 @@
     "web3": "^1.2.11"
   },
   "devDependencies": {
-    "eslint": "^7.5.0",
-    "babel-eslint": "^10.1.0"
+    "babel-eslint": "^10.1.0",
+    "eslint": "^7.5.0"
   }
 }
