--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -17,10 +17,18 @@ jobs:
           node-version: 12
       - run: yarn install
       - run: yarn lint
+      - name: Telegram Failure Notification
+         uses: appleboy/telegram-action@0.0.7
+         if: failure()
+         with:
+           message: Build failed for [${{ github.repository }}](https://github.com/${{ github.repository }}/actions)
+           format: markdown
+           to: ${{ secrets.TELEGRAM_CHAT_ID }}
+           token: ${{ secrets.TELEGRAM_BOT_TOKEN }}
 
   publish:
     runs-on: ubuntu-latest
-    needs: [build]
+    needs: build
     if: startsWith(github.ref, 'refs/tags')
     steps:
       - name: Checkout
@@ -47,11 +55,19 @@ jobs:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_TOKEN }}
 
-      - name: Telegram Message Notify
+      - name: Telegram Notification
         uses: appleboy/telegram-action@0.0.7
         with:
+          message: 🚀 Published a [${{ steps.vars.outputs.repo_name }}](https://github.com/${{ github.repository }}) version [${{ steps.vars.outputs.version }}](https://hub.docker.com/repository/docker/${{ github.repository }}) to docker hub
+          format: markdown
           to: ${{ secrets.TELEGRAM_CHAT_ID }}
           token: ${{ secrets.TELEGRAM_BOT_TOKEN }}
-          message: 🚀 Published a [${{ steps.vars.outputs.repo_name }}](https://github.com/${{ github.repository }}) version [${{ steps.vars.outputs.version }}](https://hub.docker.com/repository/docker/${{ github.repository }}) to docker hub
-          debug: true
+
+      - name: Telegram Failure Notification
+        uses: appleboy/telegram-action@0.0.7
+        if: failure()
+        with:
+          message: Failed to publish [${{ steps.vars.outputs.repo_name }}](https://github.com/${{ github.repository }}/actions)
           format: markdown
+          to: ${{ secrets.TELEGRAM_CHAT_ID }}
+          token: ${{ secrets.TELEGRAM_BOT_TOKEN }}
