--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -18,13 +18,13 @@ jobs:
       - run: yarn install
       - run: yarn lint
       - name: Telegram Failure Notification
-         uses: appleboy/telegram-action@0.0.7
-         if: failure()
-         with:
-           message: Build failed for [${{ github.repository }}](https://github.com/${{ github.repository }}/actions)
-           format: markdown
-           to: ${{ secrets.TELEGRAM_CHAT_ID }}
-           token: ${{ secrets.TELEGRAM_BOT_TOKEN }}
+        uses: appleboy/telegram-action@0.0.7
+        if: failure()
+        with:
+          message: ❗ Build failed for [${{ github.repository }}](https://github.com/${{ github.repository }}/actions) because of ${{ env.GITHUB_ACTOR }}
+          format: markdown
+          to: ${{ secrets.TELEGRAM_CHAT_ID }}
+          token: ${{ secrets.TELEGRAM_BOT_TOKEN }}
 
   publish:
     runs-on: ubuntu-latest
@@ -67,7 +67,7 @@ jobs:
         uses: appleboy/telegram-action@0.0.7
         if: failure()
         with:
-          message: Failed to publish [${{ steps.vars.outputs.repo_name }}](https://github.com/${{ github.repository }}/actions)
+          message: ❗ Failed to publish [${{ steps.vars.outputs.repo_name }}](https://github.com/${{ github.repository }}/actions) because of ${{ env.GITHUB_ACTOR }}
           format: markdown
           to: ${{ secrets.TELEGRAM_CHAT_ID }}
           token: ${{ secrets.TELEGRAM_BOT_TOKEN }}
