starting block var

--- a/.env.example
+++ b/.env.example
@@ -3,5 +3,6 @@ REDIS_URL=redis://redis:6379
 FARM_ADDR=0x577139020B7F8f58885A938F2c95A1c9D414CFE2
 PRIVATE_KEY=
 MERKLE_TREE_LEVELS=10
+STARTING_BLOCK=0
 INSERT_BATCH_SIZE=1000
 CRON_EXPRESSION="0 0 0 * * *"
