--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "fixed-merkle-tree": "^0.3.4",
     "ioredis": "^4.17.3",
     "snarkjs": "git+https://github.com/tornadocash/snarkjs.git#869181cfaf7526fe8972073d31655493a04326d5",
+    "tx-manager": "^0.1.1",
     "web3": "^1.2.11"
   },
   "devDependencies": {
