works with dummy deploy

--- a/package.json
+++ b/package.json
@@ -16,10 +16,12 @@
     "cron": "^1.8.2",
     "dotenv": "^8.2.0",
     "eth-ens-namehash": "^2.0.8",
+    "ethers": "^5.0.29",
     "fixed-merkle-tree": "^0.3.4",
     "ioredis": "^4.17.3",
-    "snarkjs": "git+https://github.com/tornadocash/snarkjs.git#869181cfaf7526fe8972073d31655493a04326d5",
+    "snarkjs": "^0.3.57",
     "torn-token": "^1.0.0",
+    "tornado-trees": "^0.0.1",
     "tx-manager": "^0.2.9",
     "web3": "^1.2.11"
   },
